--- a/.github/actions/setup-maven/action.yml
+++ b/.github/actions/setup-maven/action.yml
@@ -56,6 +56,7 @@ runs:
         sonatypeSnapshots: '${{ inputs.settings-sonatypeSnapshots}}'
 
     - name: Setup Maven Wrapper
-      run: [ "${{ inputs.maven-version }}" != "skip" ] && mvn -V -N io.takari:maven:wrapper -Dmaven=${{ inputs.maven-version }}
+      run: |
+        [ "${{ inputs.maven-version }}" != "skip" ] && mvn -V -N io.takari:maven:wrapper -Dmaven=${{ inputs.maven-version }}
       shell: bash
 
