--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-
 
-      - uses: ./.github/actions/setup-maven
+      - uses: s4u/setup-maven-action@main
         with:
           java-version: ${{ matrix.java }}
           settings-sonatypeSnapshots: true
@@ -93,7 +93,7 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-maven-site-test-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-test-
 
-      - uses: ./.github/actions/setup-maven
+      - uses: s4u/setup-maven-action@main
         with:
           java-version: 8
           settings-sonatypeSnapshots: true
@@ -119,7 +119,7 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-
 
-      - uses: ./.github/actions/setup-maven
+      - uses: s4u/setup-maven-action@main
         with:
           java-version: 8
           settings-sonatypeSnapshots: true
@@ -149,7 +149,7 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-
 
-      - uses: ./.github/actions/setup-maven
+      - uses: s4u/setup-maven-action@main
         with:
           java-version: 8
           settings-sonatypeSnapshots: true
