--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -3,23 +3,26 @@ name: Auto approve
 on:
   pull_request_target
 
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
 
       - uses: alexwilson/enable-github-automerge-action@1.0.0
-        if: >
-          github.actor == 'dependabot[bot]'
-          || github.actor == 'dependabot-preview[bot]'
+        if: github.actor == 'dependabot[bot]'
         with:
           merge-method: "REBASE"
           github-token: "${{ secrets.TECH_TOKEN }}"
 
-      - uses: hmarr/auto-approve-action@v2.1.0
+      - name: Approve a PR
         if: >
           github.actor == 'dependabot[bot]'
-          || github.actor == 'dependabot-preview[bot]'
           || github.actor == 'slawekjaranowski'
-        with:
-          github-token: "${{ secrets.TECH_TOKEN }}"
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
