--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,22 +43,23 @@ jobs:
           echo "::set-output name=maven-matrix::${MAVEN_MATRIX}"
 
   verify:
-    name: Build ${{ matrix.os }} jdk-${{ matrix.java }} mvn-${{ matrix.maven }}
+    name: Build ${{ matrix.os.label }} jdk-${{ matrix.java }} mvn-${{ matrix.maven }}
     needs: setup
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.name }}
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+        os:
+          - name: ubuntu-latest
+            label: Linux
+          - name: windows-latest
+            label: Windows
+          - name: macOS-latest
+            label: macOS
         java: [ 8, 11, 16, 17-ea ]
         maven: ${{ fromJSON( needs.setup.outputs.maven-matrix ) }}
-        inclue:
-          - os: ubuntu-latest
-            java: 11
-            maven: ${{ fromJSON( needs.setup.outputs.maven-matrix )[0] }}
-            sonar: true
 
     steps:
       - uses: s4u/setup-maven-action@v1.2.1
@@ -79,7 +80,9 @@ jobs:
         id: sonar
         run: echo "::set-output name=mvn-args::sonar:sonar -P coverage"
         if: >
-          matrix.sonar
+          matrix.os.name == 'ubuntu-latest'
+          && matrix.java == '11'
+          && matrix.maven == fromJSON( needs.setup.outputs.maven-matrix )[0]
           && github.repository_owner == 's4u'
           && startsWith( github.ref, 'refs/heads/')
 
