--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,23 +24,13 @@ jobs:
     outputs:
       branch: ${{ steps.setup.outputs.branch }}
       date-ym: ${{ steps.setup.outputs.date-ym }}
+      sonar: ${{ steps.setup.outputs.sonar }}
       maven-matrix: ${{ steps.setup.outputs.maven-matrix }}
 
     steps:
       - uses: actions/checkout@v2.3.4
-
-      - name: Read preoject environemnts
-        run: |
-          if [ -f .github/build.env ]; then cat .github/build.env >> $GITHUB_ENV; fi
-
-      - name: Set outputs
-        id: setup
-        run: |
-          echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
-          echo "::set-output name=date-ym::$(date +%y%m)"
-
-          : ${MAVEN_MATRIX:=[\"3.8.1\"]}
-          echo "::set-output name=maven-matrix::${MAVEN_MATRIX}"
+      - id: setup
+        uses: ./.github/actions/setup
 
   verify:
     name: Build ${{ matrix.os.label }} jdk-${{ matrix.java }} mvn-${{ matrix.maven }}
@@ -70,7 +60,7 @@ jobs:
           settings-sonatypeSnapshots: true
           settings-properties: |
             [
-              {"sonar.login": "2de0e32b2b3108965f76a4713ba2028978c233ed"},
+              {"sonar.login": "${{ needs.setup.outputs.sonar }}"},
               {"sonar.branch.name": "${{ needs.setup.outputs.branch }}"}
             ]
           cache-prefix: ${{ needs.setup.outputs.date-ym}}-
