--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,7 +29,7 @@ jobs:
     name: Verify ${{ matrix.os.label }} jdk-${{ matrix.java }} mvn-${{ matrix.maven }}
     needs: setup
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.name }}
 
     strategy:
       fail-fast: false
