--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           checkout-fetch-depth: 0
           java-version: ${{ matrix.java }}
+          java-distribution: zulu
           maven-version: ${{ matrix.maven }}
           settings-sonatypeSnapshots: true
           settings-properties: |
